<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patientdashboard"
            android:icon="@drawable/home"
            android:title="@string/menu_patientdashboard" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/appointment"
            android:title="Choose Doctor" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/per"
            android:title="My Profile" />

        <item android:title="Other">
            <menu>
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/aboutus"
                    android:title="@string/menu_searchpatient" />
                <item
                    android:id="@+id/nav_contactus"
                    android:icon="@drawable/mob"
                    android:title="Contact Us" />
                <item
                    android:id="@+id/nav_termsOfservice"
                    android:icon="@drawable/privacypolicy"
                    android:title="Terms Of Service" />
                <item
                    android:id="@+id/nav_privacyPolicy"
                    android:icon="@drawable/ic_baseline_work_24"
                    android:title="Privacy Policy " />
            </menu>

        </item>
        <item android:title="Extra">
            <item
                android:id="@+id/nav_changepass"
                android:icon="@drawable/changepass"
                android:title="Change Password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_appshare"
                android:icon="@drawable/share"
                android:title="Share App" />
            <item
                android:id="@+id/nav_rateapp"
                android:icon="@drawable/rate"
                android:title="Rate Us" />
        </item>


    </group>



</menu>